--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "formik": "^2.2.9",
     "next": "11.0.1",
+    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-google-recaptcha": "^2.1.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
