--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.0.1",
     "nodemailer": "^6.6.3",
     "react": "17.0.2",
+    "react-cookie-consent": "^6.3.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
     "yup": "^0.32.9"
