--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "chart.js": "^3.5.1",
     "formik": "^2.2.9",
     "next": "^11.1.2",
+    "next-auth": "^3.29.0",
     "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-chartjs-2": "^3.2.0",
     "react-cookie-consent": "^6.3.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
+    "rss-parser": "^3.12.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
