--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sendgrid/mail": "^7.6.0",
     "axios": "^0.23.0",
     "chart.js": "^3.5.1",
     "formik": "^2.2.9",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
-    "nodemailer": "^6.6.3",
     "react": "17.0.2",
     "react-chartjs-2": "^3.2.0",
     "react-cookie-consent": "^6.3.0",
