--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "formik": "^2.2.9",
+    "googleapis": "^92.0.0",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
