--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "axios": "^0.23.0",
     "formik": "^2.2.9",
-    "googleapis": "^92.0.0",
+    "google-spreadsheet": "^3.2.0",
     "next": "^11.1.2",
     "next-auth": "^3.29.0",
     "react": "17.0.2",
@@ -22,11 +22,11 @@
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
+    "autoprefixer": "^10.4.0",
     "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.7"
   }
 }
