--- a/package.json
+++ b/package.json
@@ -9,16 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^1.29.1",
     "axios": "^0.23.0",
     "formik": "^2.2.9",
     "google-spreadsheet": "^3.2.0",
     "next": "^11.1.2",
-    "next-auth": "^3.29.0",
     "react": "17.0.2",
     "react-cookie-consent": "^6.3.0",
     "react-dom": "17.0.2",
     "react-google-recaptcha": "^2.1.0",
-    "rss-parser": "^3.12.0",
     "yup": "^0.32.9"
   },
   "devDependencies": {
