--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.2",
     "react-cookie-consent": "^6.3.0",
     "react-dom": "17.0.2",
-    "react-google-recaptcha": "^2.1.0"
+    "react-google-recaptcha": "^2.1.0",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.0",
