--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "17.0.2",
     "react-cookie-consent": "^6.3.0",
     "react-dom": "17.0.2",
-    "react-hot-toast": "^2.2.0"
+    "react-hot-toast": "^2.2.0",
+    "react-markdown": "^8.0.3"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.0",
     "eslint": "7.30.0",
     "eslint-config-next": "11.0.1",
